# Metaheuristics

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  main.cpp
src/: GA.cpp  GA.h  GADataContainer.h  Individual.h  Item.cpp  Item.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  Matrix.h  Metaheurystyki.cpp  Node.cpp  Node.h  TabuList.cpp  TabuList.h  TspGA.cpp  TspGA.h
ttp_student/: trivial_0.ttp
